@@ -175,6 +175,8 @@ CREATE MEMORY TABLE REALLOCATION(ID VARCHAR(32) NOT NULL PRIMARY KEY,DESCRIPTION
 CREATE MEMORY TABLE REALLOCATION_DETAILS(REALLOCATION_ID VARCHAR(32) NOT NULL,PLACE VARCHAR(20),PRODUCT_NUMBER BIGINT NOT NULL,CONSTRAINT FKCA0B4576BA53BAF5 FOREIGN KEY(REALLOCATION_ID) REFERENCES REALLOCATION(ID),CONSTRAINT FKCA0B457618962A8D FOREIGN KEY(PRODUCT_NUMBER) REFERENCES PRODUCT(NUMBER))
 CREATE MEMORY TABLE PRODUCTEXPENSES2(ID VARCHAR(32) NOT NULL PRIMARY KEY,DESCRIPTION VARCHAR(40))
 CREATE MEMORY TABLE PRODUCTEXPENSES2_EXPENSES(PRODUCTEXPENSES2_ID VARCHAR(32) NOT NULL,CARRIER_NUMBER INTEGER,INVOICE_NUMBER INTEGER,INVOICE_YEAR INTEGER,PRODUCT_NUMBER BIGINT,CONSTRAINT FK1AEB151292A73ADC FOREIGN KEY(INVOICE_YEAR,INVOICE_NUMBER) REFERENCES INVOICE(YEAR,NUMBER),CONSTRAINT FK1AEB15123AE4C135 FOREIGN KEY(PRODUCTEXPENSES2_ID) REFERENCES PRODUCTEXPENSES2(ID),CONSTRAINT FK1AEB15121E087E6D FOREIGN KEY(CARRIER_NUMBER) REFERENCES CARRIER(NUMBER),CONSTRAINT FK1AEB151218962A8D FOREIGN KEY(PRODUCT_NUMBER) REFERENCES PRODUCT(NUMBER))
+CREATE MEMORY TABLE ROUTE(ID VARCHAR(32) NOT NULL PRIMARY KEY,DESCRIPTION VARCHAR(40))
+CREATE MEMORY TABLE ROUTE_VISITS(ROUTE_ID VARCHAR(32) NOT NULL,CARRIER_NUMBER INTEGER,CUSTOMER_NUMBER INTEGER,DESCRIPTION VARCHAR(40),KM INTEGER NOT NULL,PRODUCT_NUMBER BIGINT,CONSTRAINT FK4743875E92FC9643 FOREIGN KEY(CUSTOMER_NUMBER) REFERENCES CUSTOMER(NUMBER),CONSTRAINT FK4743875E1470CB5F FOREIGN KEY(ROUTE_ID) REFERENCES ROUTE(ID),CONSTRAINT FK4743875E1E087E6D FOREIGN KEY(CARRIER_NUMBER) REFERENCES CARRIER(NUMBER),CONSTRAINT FK4743875E18962A8D FOREIGN KEY(PRODUCT_NUMBER) REFERENCES PRODUCT(NUMBER))
 ALTER TABLE COLOR ADD CONSTRAINT FK3E43F43FA89E66D FOREIGN KEY(CHARACTERISTICTHING_NUMBER) REFERENCES CHARACTERISTICTHING(NUMBER)
 ALTER TABLE COLOR ADD CONSTRAINT FK3E43F4377DD5FE6 FOREIGN KEY(IDTHING) REFERENCES THING(IDTHING)
 ALTER TABLE CUSTOMER_STATE ADD CONSTRAINT FKEAC5F449640EB357 FOREIGN KEY(CUSTOMER) REFERENCES CUSTOMER(NUMBER)
